ROS2/skinny/log/build_2021-03-11_15-57-20/excavation/stderr.log
  File "/home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/python3.6/site-packages/excavation/excavation_node.py", line 8
    imoprt fibre.remote_object
               ^
SyntaxError: invalid syntax

